--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Contacts</title>
 	<link rel="stylesheet" type="text/css" href="contacts.css">
+	<!--style-->
+
 </head>
 <body>
 	  <div class="menu">
@@ -16,15 +18,15 @@
     <div class="content">
      <div class="logo"><a href="#"><img class="logph" src="foto/logo/Logo.png"></a></div>
         <ul class="links">
-          <li class="hover"><a href="#">Principal</a></li>
-          <li class="hover"><a href="#">À propos de nous</a></li>
-          <li class="hover"><a href="#">Galerie</a></li>
-          <li class="hover"><a href="#">Contacts</a></li>
-          <li class="hover"><a href="#">Événements</a></li>
-          <li class="hover"><a href="#">Jeu</a></li>
+          <li class="hover"><a href="#">Главная</a></li>
+          <li class="hover"><a href="about_us.html">О нас</a></li>
+          <li class="hover"><a href="#">Галерея</a></li>
+          <li class="hover"><a href="contacts.html">Контакты</a></li>
+          <li class="hover"><a href="evennement_ru.html">События</a></li>
+          <li class="hover"><a href="game.html">Игра</a></li>
 <!--выпадающий список-->
           <li>
-            <a href="#" class="desktop-link">Langues</a>
+            <a href="#" class="desktop-link">Языки</a>
             <input type="checkbox" id="show-features">
             <label for="show-features">Features</label>
             <ul>
@@ -42,7 +44,6 @@
   </div>
 
 
-
 <!-- header-->
      <header>
      	  <div class="foto_and_video">
@@ -53,10 +54,10 @@
      	  </div>
 
      	  <div class="block_for_youtube">
-     	  	  <p class="sucscrib"><a href="https://www.youtube.com/channel/UCWxv5fXOMh0UQlPbz18bEXA">Abonnez-vous à notre</a></p>
+     	  	  <p class="sucscrib"><a href="https://www.youtube.com/channel/UCWxv5fXOMh0UQlPbz18bEXA">Подписывайся на наш</a></p>
      	  	  <p class="YouTube"><a href="https://www.youtube.com/channel/UCWxv5fXOMh0UQlPbz18bEXA">YouTube</a></p>
-     	  	  <p class="nouvell"><a href="https://www.youtube.com/channel/UCWxv5fXOMh0UQlPbz18bEXA">et soyez toujours au courant des nouvelles</a></p>
-     	  	  <p class="observer">compétence acquise : #observateur</p>
+     	  	  <p class="nouvell"><a href="https://www.youtube.com/channel/UCWxv5fXOMh0UQlPbz18bEXA">и всегда будь в курсе новостей</a></p>
+     	  	  <p class="observer">получен навык: #наблюдатель</p>
      	  </div>
      </header>
 
@@ -66,7 +67,7 @@
      	 <div class="instagram">
      	 	<div class="header_instagrsam">
      	 		<p><a href="https://www.instagram.com/starenki.help/">Instagram</a></p>
-     	 	   <button><a href="https://www.instagram.com/starenki.help/">rejoindre</a></button>
+     	 	   <button><a href="https://www.instagram.com/starenki.help/">присоединиться</a></button>
      	 	</div>
 
      	 	<div class="instagram_block_for_foto">
@@ -85,7 +86,7 @@
      	 <div class="telegram">
      	 	<div class="header-telegram">
      	 		<p>Telegram</p>
-     	 	   <button><a href="https://t.me/starenki">rejoindre</a></button>
+     	 	   <button><a href="https://t.me/starenki">присоединиться</a></button>
      	 	</div>
 
      	 	<div class="telegram_block_for_foto">
@@ -101,27 +102,27 @@
 <!--button-->
      	 	<div class="a_for_fifferent_channel">
      	 		<div class="links">
-     	 			<p>Liens utiles</p>
+     	 			<p>Полезные ссылки</p>
      	 		</div>
      	 		
      	 		<div class="volunteers">
-     	 			<p><a href="https://t.me/starenki">Nous avons un canal pour les bénévoles</a></p>
-     	 			<button><a href="https://t.me/starenki">Venez à moi</a></button>
+     	 			<p><a href="https://t.me/starenki">Для волонтеров у нас есть канал</a></p>
+     	 			<button><a href="https://t.me/starenki">иди ко мне</a></button>
      	 		</div>
 
      	 		<div class="news">
-     	 			<p><a href="https://t.me/s/starenkinews">Actuelle nouvelles et parts de fonds, besoins urgents de BA et DE, rapports</a></p>
-     	 			<button><a href="https://t.me/s/starenkinews">je sais que tu le veux</a></button>
+     	 			<p><a href="https://t.me/s/starenkinews">Актуальные новости и акции фонда, насущные потребности Ба и ДЕ, отчеты</a></p>
+     	 			<button><a href="https://t.me/s/starenkinews">я знаю ты этого хочешь</a></button>
      	 		</div>
 
      	 		<div class="ChatBot">
-     	 			<p><a href="https://t.me/StarenkiBot">Télégramme avec un chat bot avec des réponses aux questions fréquemment posées sur le travail du fonds</a></p>
-     	 			<button><a href="https://t.me/StarenkiBot">Tu peux tout avoir</a></button>
+     	 			<p><a href="https://t.me/StarenkiBot">Телеграмм с чат-ботом с ответами на часто задаваемые вопросы о работе фонда</a></p>
+     	 			<button><a href="https://t.me/StarenkiBot">Ты можешь получить все</a></button>
      	 		</div>
 
      	 		<div class="volunteers_lviv">
-     	 			<p><a href="https://t.me/starenki_lviv">Volontaires de Lviv dans un télégramme</a></p>
-     	 			<button><a href="https://t.me/starenki_lviv">viens à nous</a></button>
+     	 			<p><a href="https://t.me/starenki_lviv">Волонтеры Львова в телеграмме</a></p>
+     	 			<button><a href="https://t.me/starenki_lviv">иди к нам</a></button>
      	 		</div>
      	 	</div>     	 	
      	 </div>
@@ -130,7 +131,7 @@
      <div class="facebook">
      	 <div class="header_facebook">
      	 	<p><a href="https://www.facebook.com/starenki/">Facebook</a></p>
-     	 	<button><a href="https://www.facebook.com/starenki/">rejoindre</a></button>
+     	 	<button><a href="https://www.facebook.com/starenki/">присоединиться</a></button>
      	 </div>
 
      	 <div class="block_for_img">
@@ -147,33 +148,30 @@
 
        <div class="block_main">
        	<div class="name">
-       		<p>Liens utiles</p>
+       		<p>Полезные ссылки</p>
        	</div>
 
        	<div class="first_block_main">
-       		<p><a href="https://www.facebook.com/groups/311038399306328/">Bénévoles du projet Starenki_Kiev</a></p>
-       		<button><a href="https://www.facebook.com/groups/311038399306328/">viens ici amusant</a></button>
+       		<p><a href="https://www.facebook.com/groups/311038399306328/">Волонтеры проекта Starenki_Киев</a></p>
+       		<button><a href="https://www.facebook.com/groups/311038399306328/">иди к нам тут весело</a></button>
        	</div>
 
        	<div class="second_block_main">
-       		<p><a href="https://sv-se.facebook.com/groups/419006905283493/?fref=mentions">Bénévoles du projet Starenki_Dnipro</a></p>
-       		<button><a href="https://sv-se.facebook.com/groups/419006905283493/?fref=mentions">ici aussi</a></button>
+       		<p><a href="https://sv-se.facebook.com/groups/419006905283493/?fref=mentions">Волонтеры проекта Starenki_Днепр</a></p>
+       		<button><a href="https://sv-se.facebook.com/groups/419006905283493/?fref=mentions">тут тоже</a></button>
        	</div>
        </div>
 
 
      	 <div class="footer">
-     	 	<p class="adress">Ukraine, Kiev, rue Melnikova, 12</p>
+     	 	<p class="adress">Украина, Киев,ул.Мельникова, 12</p>
 		     	 <button class="block_and">
-		     	 	  <p class="and"><span>et</span></p>
+		     	 	  <p class="and"><span>и</span></p>
 		     	 </button>
      	 	<p class="amail"><a href="mailto:help@starenki.com.ua">help@starenki.com.ua</a></p>
      	 </div>
      </div>
    </main>
-
-
-
 
    <!--конец-->
 <footer>
@@ -184,48 +182,48 @@
     <div class="text">
       <div class="block_menu">
          <ul>
-          <li><a href="#" class="help">Aider</a></li>
-          <li><a href="#" class="menu1">Menu</a></li>
-          <li><a href="#" class="contacts">Contacts et adresse</a></li>
-          <li><a href="#" class="languages">Langues</a></li>
+          <li><a href="#" class="help">Помощь</a></li>
+          <li><a href="#">Меню</a></li>
+          <li><a href="#" class="contacts">Контакты и Адрес</a></li>
+          <li><a href="#">Языки</a></li>
          </ul>
       </div>
 
          <div class="block_for_help">
         <ul>
-          <li><a href="https://www.liqpay.ua/ru/checkout/card/i9215574650">Soutenir le projet une fois</a></li>
-          <li><a href="https://www.liqpay.ua/ru/checkout/card/i9215574650">Projet de soutien mensuel</a></li>
-          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615640264876280_101898659_46AoC204jpYZdan5he2p">Aide mensuelle</a></li>
-          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615640115134966_103027107_JQXiehGFVYQkYlGzhOkc">Produits pour les personnes âgées ponctuel</a></li>
-          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615640129544951_106440338_STTbjwcZByPMgtB7ekWN">Produits pour les personnes âgées mensuel</a></li>
-          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615639751461470_122359379_OfH8pqtLRS3jd86piA4b">Produit d'hygiène</a></li>
-          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScAZ0onNui_KC1iSFcEhxrI2ab4CGLouW9S7wab5WzkmRqS3A/viewform">Faire du bénévolat</a></li>
+          <li><a href="https://www.liqpay.ua/ru/checkout/card/i9215574650">Поддерживать Проект Единоразово</a></li>
+          <li><a href="https://www.liqpay.ua/ru/checkout/card/i9215574650">Поддерживать Проект Ежемесячно</a></li>
+          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615640264876280_101898659_46AoC204jpYZdan5he2p">Помогать Ежемесячно</a></li>
+          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615640115134966_103027107_JQXiehGFVYQkYlGzhOkc">Продукты для стареньких единоразово</a></li>
+          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615640129544951_106440338_STTbjwcZByPMgtB7ekWN">Продукты для стареньких ежемесячно</a></li>
+          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615639751461470_122359379_OfH8pqtLRS3jd86piA4b">Средство гигиены</a></li>
+          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScAZ0onNui_KC1iSFcEhxrI2ab4CGLouW9S7wab5WzkmRqS3A/viewform">Волонтерство</a></li>
         </ul>
       </div>
 
          <div class="block_for_menu">
         <ul>
-          <li><a href="">Principal</a></li>
-          <li><a href="">À propos de nous</a></li>
-          <li><a href="">Galerie</a></li>
-          <li><a href="">Contacts</a></li>
-          <li><a href="contacts_ru.html">Événements</a></li>
-          <li><a href="">Jeu</a></li>
+          <li><a href="">Главная</a></li>
+          <li><a href="about_us.html">О нас</a></li>
+          <li><a href="">Галерея</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+          <li><a href="evennement_ru.html">События</a></li>
+          <li><a href="game.html">Игра</a></li>
         </ul>
          </div>
 
       <div class="block_for_adress">
-        <p class="adress"><a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%AE%D1%80%D0%B8%D1%8F+%D0%98%D0%BB%D1%8C%D0%B5%D0%BD%D0%BA%D0%BE,+12,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4651506,30.4772799,19z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce7874db2b63:0xd69ace3b27b8c44c!8m2!3d50.4651506!4d30.4778271?hl=ru">Ukraine, Kiev, st. Melnikova, 12 ans</a></p>
+        <p class="adress"><a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%AE%D1%80%D0%B8%D1%8F+%D0%98%D0%BB%D1%8C%D0%B5%D0%BD%D0%BA%D0%BE,+12,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4651506,30.4772799,19z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce7874db2b63:0xd69ace3b27b8c44c!8m2!3d50.4651506!4d30.4778271?hl=ru">Украина, Киев, ул. Мельникова, 12</a></p>
         <p class="amail"><a href="mailto:help@starenki.com.ua">help@starenki.com.ua</a></p>
 
         <div class="block_with_img_link">
-          <a href="https://www.instagram.com/starenki.help/"><img src="foto/end/instagram_1.png" class="instagram"></a>
-          <a href="https://www.facebook.com/starenki/"><img src="foto/end/facebook_1.png" class="facebook"></a>
-          <a href="https://t.me/starenki"><img src="foto/end/telega_1.png" class="telega"></a>
+          <a href="https://www.instagram.com/starenki.help/"><img src="foto/insta/instagram_1.png" class="instagram"></a>
+          <a href="https://www.facebook.com/starenki/"><img src="foto/insta/facebook_1.png" class="facebook"></a>
+          <a href="https://t.me/starenki"><img src="foto/insta/telega_1.png" class="telega"></a>
 
               <div class="gmail_youtube">
-                <a href="mailto:help@starenki.com.ua"><img src="foto/end/gamail_1.png" class="gmail"></a>
-                <a href="https://www.youtube.com/channel/UCWxv5fXOMh0UQlPbz18bEXA"><img src="foto/end/youtube_1.png" class="youtube"></a>
+                <a href="mailto:help@starenki.com.ua"><img src="foto/insta/gamail_1.png" class="gmail"></a>
+                <a href="https://www.youtube.com/channel/UCWxv5fXOMh0UQlPbz18bEXA"><img src="foto/insta/youtube_1.png" class="youtube"></a>
               </div>
         </div>
 
@@ -256,25 +254,25 @@
 
       <div class="insta">
         <a href="https://www.instagram.com/cheater666_programist/">
-          <img src="foto/end/instagram_black.png">
+          <img src="foto/insta/instagram_black.png">
         </a>
       </div>
 
       <div class="telega_oleksandr">
         <a href="https://web.telegram.org/#/im?p=@oleksandr">
-          <img src="foto/end/telega_black.png">
+          <img src="foto/insta/telega_black.png">
         </a>
       </div>
 
       <div class="telega_Aahzmandiuss">
         <a href="https://web.telegram.org/#/im?p=@Aahzmandiuss">
-          <img src="foto/end/telega_black.png">
+          <img src="foto/insta/telega_black.png">
         </a>
       </div>
 
       <div class="telega_Dana">
         <a href="https://web.telegram.org/#/im?p=u854258987_4383190150680909201">
-          <img src="foto/end/telega_black.png">
+          <img src="foto/insta/telega_black.png">
         </a>
       </div>
      </div>
@@ -284,7 +282,6 @@
       </button>
 
    </footer>
-
    <script src="contacts.js"></script>
 </body>
 </html>
